--- a/api-feed-deployment.yaml
+++ b/api-feed-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: my-udagram-api-feed
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: my-udagram-api-feed
@@ -17,6 +17,13 @@ spec:
       containers:
         - name: udagram-api-feed
           image: kelvinarnold/udagram-api-feed:v1
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "2048Mi"
+              cpu: "500m"
           ports:
             - containerPort: 80
           env:
