--- a/api-user-deployment.yaml
+++ b/api-user-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
         - name: udagram-api-user
           image: kelvinarnold/udagram-api-user:v1
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "2048Mi"
+              cpu: "500m"
           ports:
             - containerPort: 80
           env:
